<resources>
    <string name="app_name">Megha</string>
    <string name="weather">Weather</string>
    <string name="camera">Camera</string>
    <string name="clouds">Clouds</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_fragment">Weather Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="clouds_fragment">Clouds Fragment</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="megha_image">Megha Image</string>
    <string name="click_to_capture_image">Click to capture image</string>
    <string name="camera_icon">camera icon</string>
    <string name="tap_to_capture_a_cloud">Tap to capture a cloud</string>
    <string name="predicted_text">Predicted Text:</string>
    <string name="please_capture_an_image_to_see_the_prediction">Please capture an image to see the prediction.</string>
    <string name="scan_another_cloud">Scan another cloud</string>
    <string name="learn_about_clouds">Learn About Clouds</string>
    <string name="cloud">Cloud</string>
    <string name="cirrus_clouds">Cirrus Clouds</string>
    <string name="cirrus_text">The highest and least-substantial clouds. Composed of ice crystals, cirrus clouds lie at altitudes of about 45,000 feet. Wispy and lying at oblique angles, these clouds may herald the approach of a warm front.</string>
    <string name="cirrostratus_clouds">Cirrostratus Clouds</string>
    <string name="cirrostratus_text">Wispy clouds lying in sheets may form a ceiling slightly lower than cirrus clouds as a warm front nears and layers of cold air mix with upper warm air. May drape the entire sky in a gray haze and cause a halo around the sun or moon — an indication of a nearing storm.</string>
    <string name="cirrocumulus_clouds">Cirrocumulus Clouds</string>
    <string name="cirrocumulus_text">Have barely-defined puffy balls and, like cirrostratus, lie at altitudes of 16,500 to 40,000 feet, usually in large clumps. From below, these clouds may look like fish scales. The saying \'mackerel sky mackerel sky, not long wet, not long dry\' describes them and the changeable weather that follows.</string>
    <string name="altostratus_clouds">Altostratus Clouds</string>
    <string name="altostratus_text">Sheets of cloud between 6,000 and 23,000 feet. Thicker, darker and more claustrophobic than the higher cirrostratus clouds, they promise rain soon.</string>
    <string name="altocumulus_clouds">Altocumulus Clouds</string>
    <string name="altocumulus_text">These have grayish-white rolls that look like cirrocumulus but are darker and sometimes appear in layers. If the wind is steady between northeast and south, these clouds promise rain soon.</string>
    <string name="stratocumulus_clouds">Stratocumulus Clouds</string>
    <string name="stratocumulus_text">Large, dark, puffy balls occurring in compressed layers and foretell bad weather.</string>
    <string name="cumulus_clouds">Cumulus Clouds</string>
    <string name="cumulus_text">Puffy white cotton balls at about 6,000 feet promise fair weather. They may, however, darken and be transformed into stratocumulus or cumulonimbus clouds, which can signal bad weather. Seen over land during the day indicates thermals and promises good sea breezes.</string>
    <string name="cumulonimbus_clouds">Cumulonimbus Clouds</string>
    <string name="cumulonimbus_text">Dark, tightly-packed balls that may churn and tower as thunderheads at about 6,000 feet. If broader above than below, it\'s called an anvil head. This shape is due to violent updrafts through a wide range of temperatures. As the updraft hits, cold air is condensed as a cloud. Winds are strong around these threatening clouds.</string>
    <string name="nimbostratus_clouds">Nimbostratus Clouds</string>
    <string name="nimbostratus_text">Heavy, rain-laden, low-lying, dark gray blankets that come with warm fronts and wet nor\'easters. Their soggy bases may be just above the earth\'s surface and be indistinguishable from heavy fog.</string>
    <string name="stratus_clouds">Stratus Clouds</string>
    <string name="stratus_text">These clouds combine in a dense gray overcast that promises light to heavy rain.</string>
    <string name="contrails">Contrails</string>
    <string name="contrails_text">Airplanes!</string>
</resources>